# idea-movies

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
ideamovies/: asgi.py  settings.py  urls.py  wsgi.py
movies/: admin.py  models.py  urls.py  views.py
static/: output.css
static/assets/css/: templatemo-cyborg-gaming.css
templates/: base.html
templates/email_accounts/: login.html  register.html
templates/movies/: browse.html  detail.html  home.html  movie_list.html  movies.html  search.html  series.html
