[tool.poetry]
name = "idea-movies"
version = "0.1.0"
description = ""
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"
packages = [{include = "idea_movies"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-email-accounts = "^0.3.1"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
